--- a/hunter-po.html
+++ b/hunter-po.html
@@ -7,160 +7,55 @@
 <style>
   @import url('https://fonts.googleapis.com/css2?family=Archivo+Black&family=Montserrat:wght@300;400;500;600;700&display=swap');
 
-  .prospect-page {
-    max-width: 960px;
-    margin: 0 auto 2.5rem auto;
-    font-family: 'Montserrat', sans-serif;
-    color: #1a1a1a;
-  }
+  body { margin:0; background:#f5f7fb; font-family:'Montserrat', sans-serif;}
+  .prospect-page { max-width:960px; margin:0 auto 3rem auto; padding:1.5rem 1rem; color:#1a1a1a;}
 
   /* HERO */
   .prospect-hero {
-    display: flex;
-    flex-wrap: nowrap;
-    justify-content: space-between;
-    gap: 1.25rem;
-    padding: 1.5rem 1.25rem;
-    border-radius: 12px;
-    background: #2E5084;
-    color: #ffffff;
-    margin-bottom: 1.5rem;
+    display:flex; flex-wrap:wrap; justify-content:space-between; gap:1.25rem;
+    padding:1.75rem 1.25rem; border-radius:14px; background:#2E5084; color:#fff; margin-bottom:2rem;
   }
+  .prospect-name { font-family:'Archivo Black'; font-size:2rem; margin:0 0 .25rem; text-transform:uppercase;}
+  .prospect-tagline { margin:0 0 .15rem; font-size:1rem; font-weight:600;}
+  .prospect-subtitle {margin:0; font-size:.9rem; opacity:.9;}
 
-  .prospect-hero-main {
-    flex: 1 1 60%;
-    max-width: 70%;
-    min-width: 260px;
+  /* GRADE CARD  */
+  .prospect-grade-card{
+    min-width:200px; padding:1rem 1.25rem; border-radius:12px; background:rgba(255,255,255,.15);
+    border:1px solid rgba(255,255,255,.35); backdrop-filter:blur(4px);
   }
+  .grade-label{ font-size:.7rem; opacity:.8; text-transform:uppercase;}
+  .grade-score{ font-family:'Archivo Black'; font-size:2.2rem; margin:.15rem 0;}
+  .grade-tier{ font-size:.9rem; font-weight:600;}
+  .grade-note{ font-size:.75rem; opacity:.9;}
 
-  .prospect-name {
-    font-family: 'Archivo Black', sans-serif;
-    font-size: 1.85rem;
-    margin: 0 0 0.25rem;
-    letter-spacing: 0.02em;
-    text-transform: uppercase;
+  /* Pills */
+  .recommendation-pill{
+    display:inline-flex; align-items:center; gap:5px; background:#fff; color:#2E5084;
+    padding:4px 10px; border:1px solid #dce2ee; border-radius:30px; font-weight:600;
+    font-size:.78rem; margin-top:.55rem; width:fit-content;
   }
-
-  .prospect-tagline {
-    margin: 0 0 0.18rem;
-    font-size: 0.95rem;
-    font-weight: 600;
-  }
-
-  .prospect-subtitle {
-    margin: 0;
-    font-size: 0.85rem;
-    opacity: 0.9;
-  }
-
-  .prospect-grade-card {
-    flex: 0 0 200px;
-    width: 200px;
-    padding: 0.75rem 1rem;
-    border-radius: 10px;
-    background: rgba(255,255,255,0.15);
-    border: 1px solid rgba(255,255,255,0.3);
-    backdrop-filter: blur(4px);
-  }
-
-  .grade-label {
-    font-size: 0.7rem;
-    text-transform: uppercase;
-    opacity: 0.8;
-    margin-bottom: 0.25rem;
-  }
-
-  .grade-score {
-    font-family: 'Archivo Black', sans-serif;
-    font-size: 1.9rem;
-    margin-bottom: 0.1rem;
-  }
-
-  .grade-tier {
-    font-size: 0.8rem;
-    font-weight: 600;
-  }
-
-  .grade-note {
-    font-size: 0.75rem;
-    opacity: 0.85;
-  }
+  .pill-box{width:12px;height:12px;border-radius:3px;}
+  .pill-green{background:#22c55e;} .pill-yellow{background:#eab308;} .pill-red{background:#ef4444;}
 
   /* META */
-  .prospect-meta {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 1rem;
-    margin-bottom: 1.5rem;
-  }
+  .prospect-meta{display:flex;flex-wrap:wrap;gap:1.25rem;margin-bottom:2rem;}
+  .meta-column{flex:1 1 280px;background:#fff;border-radius:12px;padding:1rem 1.25rem;border:1px solid #dce2ee;}
+  .meta-title{font-family:'Archivo Black';font-size:.9rem;color:#2E5084;text-transform:uppercase;margin:0 0 .7rem;}
+  .meta-list{list-style:none;padding:0;margin:0;}
+  .meta-list li{display:flex;justify-content:space-between;padding:.28rem 0;border-bottom:1px dotted #e7eaf3;font-size:.87rem;}
+  .meta-value{text-align:right;margin-left:1rem;}
 
-  .meta-column {
-    flex: 1 1 260px;
-    background: #ffffff;
-    border-radius: 10px;
-    padding: 1rem 1.1rem;
-    border: 1px solid #dce2ee;
-  }
+  /* CONTENT */
+  .prospect-section{background:#fff;border-radius:12px;padding:1.15rem 1.35rem;border:1px solid #dce2ee;margin-bottom:1.4rem;}
+  .section-title{font-family:'Archivo Black';font-size:.95rem;color:#2E5084;text-transform:uppercase;margin-bottom:.65rem;}
+  .section-body{font-size:.9rem;line-height:1.52;}
+  .section-list{font-size:.9rem;line-height:1.52;padding-left:1.2rem;} 
+  .section-list li{margin-bottom:.38rem;}
 
-  .meta-title {
-    font-family: 'Archivo Black', sans-serif;
-    font-size: 0.85rem;
-    text-transform: uppercase;
-    letter-spacing: 0.07em;
-    color: #2E5084;
-    margin: 0 0 0.6rem;
-  }
-
-  .meta-list {
-    list-style: none;
-    padding: 0;
-    margin: 0;
-  }
-
-  .meta-list li {
-    display: flex;
-    justify-content: space-between;
-    padding: 0.2rem 0;
-    border-bottom: 1px dotted #e5e8f1;
-    font-size: 0.85rem;
-  }
-
-  .meta-value {
-    text-align: right;
-    margin-left: 1rem;
-  }
-
-  /* SECTIONS */
-  .prospect-section {
-    margin-bottom: 1.25rem;
-    padding: 1rem 1.1rem;
-    border-radius: 10px;
-    border: 1px solid #dce2ee;
-    background: #ffffff;
-  }
-
-  .section-title {
-    font-family: 'Archivo Black', sans-serif;
-    font-size: 0.9rem;
-    text-transform: uppercase;
-    color: #2E5084;
-    margin: 0 0 0.6rem;
-  }
-
-  .section-body {
-    font-size: 0.88rem;
-    line-height: 1.48;
-  }
-
-  .section-list {
-    padding-left: 1.1rem;
-    font-size: 0.88rem;
-    line-height: 1.48;
-    margin: 0;
-  }
-
-  .section-list li {
-    margin-bottom: 0.35rem;
+  @media(max-width:650px){
+    .meta-list li{flex-direction:column;align-items:flex-start;}
+    .meta-value{margin-left:0;margin-top:2px;text-align:left;}
   }
 </style>
 </head>
@@ -168,119 +63,125 @@
 <body>
 <div class="prospect-page">
 
-  <!-- HERO -->
-  <section class="prospect-hero">
-    <div class="prospect-hero-main">
-      <h1 class="prospect-name">HUNTER PO</h1>
-      <p class="prospect-tagline">⭐️⭐️⭐️ Prospect · Hustler Archetype · Investment Banking Track</p>
-      <p class="prospect-subtitle">Columbia University · Golf ⛳ · Class of 2028</p>
+<!-- HERO -->
+<section class="prospect-hero">
+  <div>
+    <h1 class="prospect-name">Hunter Po</h1>
+    <p class="prospect-tagline">⭐️⭐️⭐️ — Investment Banking Prospect</p>
+    <p class="prospect-subtitle">Columbia University · Golf · Class of 2028</p>
+  </div>
+
+  <!-- GRADE BLOCK -->
+  <div class="prospect-grade-card">
+    <div class="grade-label">MAP Prospect Grade</div>
+    <div class="grade-score">87</div>
+    <div class="grade-tier">Round 3–4</div>
+    <div class="grade-note">Watchlist</div>
+
+    <div class="recommendation-pill">
+      <div class="pill-box pill-red"></div>
+      <div class="pill-box pill-red"></div>
+      <div class="pill-box pill-red"></div>
+      <span>Watchlist Recommendation</span>
     </div>
+  </div>
+</section>
 
-    <div class="prospect-grade-card">
-      <div class="grade-label">MAP Prospect Grade</div>
-      <div class="grade-score">87</div>
-      <div class="grade-tier">Round 5–6 Candidate</div>
-      <div class="grade-note">Strong finance résumé · inconsistent MAP performance</div>
-    </div>
-  </section>
 
-  <!-- META -->
-  <section class="prospect-meta">
+<!-- META -->
+<section class="prospect-meta">
 
-    <div class="meta-column">
-      <h2 class="meta-title">Prospect Info</h2>
-      <ul class="meta-list">
-        <li><span>School</span><span class="meta-value">Columbia University</span></li>
-        <li><span>Major</span><span class="meta-value">Financial Economics</span></li>
-        <li><span>Minor</span><span class="meta-value">N/A</span></li>
-        <li><span>Year</span><span class="meta-value">2028</span></li>
-        <li><span>GPA</span><span class="meta-value">3.7</span></li>
-        <li><span>Sport</span><span class="meta-value">Golf ⛳</span></li>
-        <li><span>Hometown</span><span class="meta-value">San Diego, CA</span></li>
-      </ul>
-    </div>
-
-    <div class="meta-column">
-      <h2 class="meta-title">MAP Profile</h2>
-      <ul class="meta-list">
-        <li><span>Official Points</span><span class="meta-value">1166.5</span></li>
-        <li><span>Cumulative Rank</span><span class="meta-value">20 / 63</span></li>
-        <li><span>Phase 1 Rank</span><span class="meta-value">28 / 63</span></li>
-        <li><span>Phase 2 Rank</span><span class="meta-value">20 / 30</span></li>
-        <li>
-          <span>Personality</span>
-          <span class="meta-value">
-            6. Hustler<br>
-            (Initiative-Driven Personality · Resourcefulness · Upward Trajectory)
-          </span>
-        </li>
-        <li>
-          <span>Leadership</span>
-          <span class="meta-value">
-            Democratic Leader<br>
-            (Collaborative Decision-Making · Shared Ownership · Team Buy-In)
-          </span>
-        </li>
-      </ul>
-    </div>
-
-  </section>
-
-  <!-- OVERVIEW -->
-  <section class="prospect-section">
-    <h2 class="section-title">Overview</h2>
-    <p class="section-body">
-      Hunter brings one of the strongest finance résumés in the Diamond League class — with real exposure across 
-      investment banking, real estate private equity, M&A sourcing, and equities research. He embodies the Hustler 
-      archetype: proactive, opportunistic, and consistently leveraging new environments to build technical and 
-      professional skill sets beyond what most first-years see.
-      <br><br>
-      His MAP performance, however, reflects inconsistency. Competing in-season as a Division I golfer with heavy 
-      travel demands, Hunter missed touchpoints and struggled with reliability during multi-week deliverables. 
-      The capability and intent are clearly there — but the consistency gap is meaningful and something firms 
-      will evaluate closely.
-      <br><br>
-      When fully dialed in, Hunter performs at a high level, demonstrating a mature grasp of finance concepts and 
-      strong professional polish. His résumé is genuinely differentiated; the question is execution rhythm and 
-      reliability in high-pressure, time-compressed environments like investment banking.
-    </p>
-  </section>
-
-  <!-- STRENGTHS -->
-  <section class="prospect-section">
-    <h2 class="section-title">Strengths</h2>
-    <ul class="section-list">
-      <li><strong>Deep deal & finance exposure:</strong> IB analyst work, REPE underwriting, M&A sourcing, and equities research.</li>
-      <li><strong>Hustler initiative:</strong> Proactively creates opportunities; strong upward trajectory; consistently self-driven.</li>
-      <li><strong>Technical foundation:</strong> Comfortable with DCFs, comps, precedents, financial modeling, and pitchbook work.</li>
-      <li><strong>Academic rigor:</strong> 3.7 GPA in Financial Economics with supporting quantitative coursework.</li>
-      <li><strong>Leadership & community impact:</strong> VP of Asian & Pacific Islander Student Athlete Club; wellness rep for golf.</li>
-      <li><strong>Athletic discipline:</strong> Balancing 30+ weekly hours of training with academics and professional commitments.</li>
-      <li><strong>Professional polish:</strong> Clear communicator; exposure to multiple asset classes and investment workflows.</li>
+  <!-- Prospect Info -->
+  <div class="meta-column">
+    <h2 class="meta-title">Prospect Info</h2>
+    <ul class="meta-list">
+      <li><span>School</span><span class="meta-value">Columbia University</span></li>
+      <li><span>Major</span><span class="meta-value">Financial Economics</span></li>
+      <li><span>Minor</span><span class="meta-value">N/A</span></li>
+      <li><span>Year</span><span class="meta-value">2028</span></li>
+      <li><span>GPA</span><span class="meta-value">3.7</span></li>
+      <li><span>Sport</span><span class="meta-value">Golf</span></li>
+      <li><span>Hometown</span><span class="meta-value">Lake Forest, IL</span></li>
     </ul>
-  </section>
+  </div>
 
-  <!-- AREAS FOR DEVELOPMENT -->
-  <section class="prospect-section">
-    <h2 class="section-title">Areas for Development</h2>
-    <ul class="section-list">
-      <li>Close reliability gaps on longer MAP deliverables — consistency is the key unlock for his trajectory.</li>
-      <li>Strengthen time-management systems during travel-heavy periods to match analyst-level expectations.</li>
-      <li>Sharpen narrative clarity in interviews to balance strong technical exposure with execution questions.</li>
+  <!-- MAP Profile -->
+  <div class="meta-column">
+    <h2 class="meta-title">MAP Profile</h2>
+    <ul class="meta-list">
+      <li><span>Fellowship Rank</span><span class="meta-value">20 / 78</span></li>
+      <li><span>Interview #1</span><span class="meta-value">71 / 85 → 83.5%</span></li>
+      <li><span>Interview #2</span><span class="meta-value">101.5 / 104 → 97.6%</span></li>
+      <li><span>Interview #3</span><span class="meta-value">99 / 141 → 70.2%</span></li>
+      <li><span>Personality</span><span class="meta-value">Hustler (Driven, Creative)</span></li>
+      <li><span>Leadership</span><span class="meta-value">Democratic (Team Input, Shared Decisions)</span></li>
+      <li><span>Teamwork</span><span class="meta-value" id="teamworkField"></span></li>
     </ul>
-  </section>
+  </div>
 
-  <!-- PROJECTION -->
-  <section class="prospect-section">
-    <h2 class="section-title">Projection</h2>
-    <p class="section-body">
-      Hunter grades as a Round 5–6 MAP prospect with one of the deepest finance backgrounds in the cohort. His 
-      technical ability, deal exposure, and Hustler wiring give him meaningful upside — but inconsistent MAP execution 
-      currently places him below the Fellowship’s top tiers. If reliability aligns with capability, he can realistically 
-      elevate into a competitive 2027 investment banking pipeline candidate.
-    </p>
-  </section>
+</section>
+
+
+<!-- OVERVIEW -->
+<section class="prospect-section">
+  <h2 class="section-title">Overview</h2>
+  <p class="section-body">
+  Hunter brings one of the strongest finance résumés in the Diamond League class — with real exposure across 
+  investment banking, real estate private equity, M&A sourcing, and equities research. He embodies the Hustler 
+  archetype: proactive, opportunistic, and consistently leveraging new environments to build technical and 
+  professional skill sets beyond what most first-years see. His MAP performance reflects inconsistency, but the 
+  underlying potential is significant — when fully dialed in, he performs at a high level with strong financial 
+  grounding and professional polish.
+  </p>
+</section>
+
+<section class="prospect-section">
+  <h2 class="section-title">Strengths</h2>
+  <ul class="section-list">
+    <li>Deep finance exposure — IB, REPE underwriting, M&A sourcing, equities research.</li>
+    <li>Hustler initiative — consistently creates opportunities and builds upward momentum.</li>
+    <li>Technical foundation — comfortable with comps, DCFs, modeling workflows.</li>
+    <li>Academic rigor — 3.7 GPA in Financial Economics.</li>
+    <li>Leadership & DEI impact — VP of API Athlete Club; wellness representation.</li>
+    <li>Strong BD instincts — sourcing and outbound experience.</li>
+    <li>Athletic discipline — high time-management demands from Division I golf.</li>
+  </ul>
+</section>
+
+<section class="prospect-section">
+  <h2 class="section-title">Areas for Development</h2>
+  <ul class="section-list">
+    <li>Consistency in weekly deliverables and sustained MAP pacing.</li>
+    <li>Sharpen narrative clarity to match technical experience.</li>
+    <li>Time-management system improvements during travel seasons.</li>
+  </ul>
+</section>
+
+<section class="prospect-section">
+  <h2 class="section-title">Projection</h2>
+  <p class="section-body">
+    A <strong>Round 3–4 Watchlist</strong> MAP prospect with one of the deepest finance backgrounds in the cohort. 
+    If reliability rises to match capability, Hunter has the potential to evolve into a high-performing investment 
+    banking candidate for Summer 2027 — with upside driven by his technical exposure, deal literacy, and Hustler motor.
+  </p>
+</section>
 
 </div>
+
+<!-- AUTO TEAMWORK -->
+<script>
+  const PHASE = "Planning";
+  const teamworkByPhase = {
+    "Initiation": ["Cooperative", "Inclusive, Team-First"],
+    "Planning": ["Detail-Oriented", "Precise, Quality-Focused"],
+    "Execution": ["Idea-Oriented", "Creative, Strategic"],
+    "Control": ["Logical", "Analytical, Evidence-Based"],
+    "Monitoring": ["Supportive", "Steady, Reliable"],
+  };
+  document.getElementById("teamworkField").innerText =
+    `${teamworkByPhase[PHASE][0]} (${teamworkByPhase[PHASE][1]})`;
+</script>
+
 </body>
 </html>
+
