--- a/hunter-po.html
+++ b/hunter-po.html
@@ -110,9 +110,9 @@
     <h2 class="meta-title">MAP Profile</h2>
     <ul class="meta-list">
       <li><span>Fellowship Rank</span><span class="meta-value">20 / 78</span></li>
-      <li><span>Interview #1</span><span class="meta-value">71 / 85 → 83.5%</span></li>
-      <li><span>Interview #2</span><span class="meta-value">101.5 / 104 → 97.6%</span></li>
-      <li><span>Interview #3</span><span class="meta-value">99 / 141 → 70.2%</span></li>
+      <li><span>Interview #1</span><span class="meta-value">83.5%</span></li>
+      <li><span>Interview #2</span><span class="meta-value">97.6%</span></li>
+      <li><span>Interview #3</span><span class="meta-value">70.2%</span></li>
       <li><span>Personality</span><span class="meta-value">Hustler (Driven, Creative)</span></li>
       <li><span>Leadership</span><span class="meta-value">Democratic (Team Input, Shared Decisions)</span></li>
       <li><span>Teamwork</span><span class="meta-value" id="teamworkField"></span></li>
